erDiagram
    %% Ядро платформы (основная диаграмма для диплома)

    users ||--o{ volunteer_profiles : user_id
    tasks ||--o{ task_assignments : task_id
    users ||--o{ task_assignments : user_id
    organizations ||--o{ tasks : organization_id
    events ||--o{ tasks : event_id
    users ||--o{ tasks : created_by
    users ||--o{ tasks : completion_confirmed_by
    organizations ||--o{ events : organization_id
    users ||--o{ events : created_by
    organizations ||--o{ time_entries : organization_id
    users ||--o{ time_entries : user_id
    events ||--o{ time_entries : event_id
    tasks ||--o{ time_entries : task_id
    users ||--o{ time_entries : reviewed_by
    events ||--o{ event_attendance : event_id
    users ||--o{ event_attendance : user_id
    events ||--o{ event_applications : event_id
    users ||--o{ event_applications : user_id
    organizations ||--o{ organization_members : organization_id
    users ||--o{ organization_members : user_id

    event_applications {
        uuid id
        uuid event_id
        uuid user_id
        text status
    }

    event_attendance {
        uuid id
        uuid event_id
        uuid user_id
        timestamptz check_in_at
        timestamptz check_out_at
        numeric hours
    }

    events {
        uuid id
        uuid organization_id
        text title
        text format
        text status
        timestamptz starts_at
        timestamptz ends_at
    }

    organization_members {
        uuid id
        uuid organization_id
        uuid user_id
        text role
        text status
    }

    organizations {
        uuid id
        text name
    }

    task_assignments {
        uuid id
        uuid task_id
        uuid user_id
        timestamptz assigned_at
        text role
    }

    tasks {
        uuid id
        uuid organization_id
        uuid event_id
        text title
        text status
        text priority
        timestamptz due_at
    }

    time_entries {
        uuid id
        uuid organization_id
        uuid user_id
        uuid event_id
        uuid task_id
        numeric hours
        text status
    }

    users {
        uuid id
        text email
        text first_name
        text last_name
    }

    volunteer_profiles {
        uuid id
        uuid user_id
        text city
        integer points
        integer level
        text status
    }
